# ML

./: .gitignore  ML.sln
Airbnb/: Airbnb.pyproj  module1_azure.py  module3_python_v2.py  module5_add_sessions.py  module6_boost_cv.py  module7_boost_submit.py  module9_boost_2models.py
DeepLearning/: .gitignore  DNN.py  DNN.pyproj  DNN.sln  README.md  TestKeras.py  WebService.py  test.py  test2.py
DeepLearning/MNIST/: MNIST.ipynb
DeepLearning/ModelWrapper/: ModelWrapper.csproj  Program.cs
DeepLearning/TF/: Untitled.ipynb  mnist_softmax.py
DeepLearning/Titanic/: titanic.ipynb
DeepLearning/Zillow/: Zillow.ipynb  file1.pickle
Experiments/TextClassification/: Emoji - PyTorch.ipynb  Horia.ipynb  Imdb.ipynb  Invoice.ipynb  TextClassification.pyproj  TextClassification.sln  dataset.py  debug.py  models.py  tests.py  textclassification.py  textclf.ipynb  trainer.py  util.py
Facebook/: Facebook.pyproj  ensemble.py  module1.py  module3.py  module4_knn.py  module4_knn_v2.py  test1.py  test2.py
Kaggle/Airbnb/: Airbnb.sln  module2_python_v1.py  module4_remove_sessions.py  module4_remove_sessions_1.py  module6_boost_test.py  module8_boost_2models.py  workfile
Kaggle/Facebook/: Facebook.pyproj  Untitled.ipynb  common.py  ensemble1.py  module2.py  module4_knn_v3.py  test1_map.py
Santander/: Santander.pyproj  Santander.sln  cv_common.py  module1.py  module2_cv.py  module2_cv_ab.py  module3_bagging.py  module4_stack.py
TwoSigma/: TwoSigma.pyproj  Untitled1.ipynb  Untitled3.ipynb  module1.py
pocs/: workspace.code-workspace
pocs/rft/: pyproject.toml  train.py
(+24 files in other folders)
